[package]
name = "rusvm"
description = "Solve SVM training problems"
version = "0.2.2"
authors = ["Nico Strasdat <nstrasdat@gmail.com>"]
edition = "2021"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/wotzlaff/rusvm"
keywords = ["smo", "svm", "machine-learning"]

[dependencies]
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["intel-mkl-static"], optional = true }
caches = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
rulinalg = "0.4.2"
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Window", "Performance"], optional = true }

[features]
default = ["lapack"]
lapack = ["dep:ndarray-linalg"]
wasm = ["dep:web-sys", "dep:wasm-bindgen"]
